--- a/src/Routes/style.css
+++ b/src/Routes/style.css
@@ -12,69 +12,55 @@
     position: relative;
 }
 .wall{
-    position: relative;
-    overflow: hidden;
-    transform: translate3d(0px, 0px, 0px);
-    visibility: visible;
-    top: 0px;
-    height: 460px;
-    width: 1200px;
-    
-}
-.wall-img{
     background-image: url("../assets/images/simple-house-01.jpg");
+    height: 100%;
+    width: 100%;
+    margin-bottom: 80px;
     background-attachment: fixed;
-    background-repeat: no-repeat;
     background-position: center;
-    size: cover;
-    transform: translate3d(0px, 0px, 0px);
-    position: absolute;
-    top: -445px;
-    left: 0px;
-    height: 1200px;
-    width: 1200px;
-    max-width: none;
-    z-index: -999 !important;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
-
 .menu{
     right: 100px;
     position: absolute;
     height: 400px;
     width: 200px;
-    bottom: -325px;
-    
-  
+    bottom: -325px; 
 }
 .menu ul{
-    justify-content: flex-start;
-    display: flex;
-    flex-direction: row;
     list-style: none;
+    width: 250px;
+    margin-right: 20px;
     display: flex;
-    
-}
-.menu ul li{
-    transition: all 0.3s;
-    display: block;
-    align-items: flex-start;
-    width: 34px;
-    height: 48px;
-    padding: 0px 25px;
-    font-family: 'Open Sans',Arial,sans-serif;
-    font-size: 17px;
-    color: white;
-    list-style-type: none;
-    margin: 10px 20px;
+    justify-content: space-between;
+    padding-right: 50px;  
 }
 .menu ul li a{
-
     text-decoration: none;
     color: rgb(255, 255, 255);
+    padding-bottom: 10px;
+    font-size: 20px;
+    line-height: 20px;
 }
 .menu ul li:hover{
     border-bottom: 1px solid white;
-    padding-bottom: 10px;
-
+}
+.logo{
+    font-family: 'Open Sans',Arial,sans-serif;
+    margin-top: 340px;
+    margin-left: 50px;
+    color: white;
+    width: 280px;
+    display: flex;
+    flex-direction: row;
+}
+.S-H{
+    font-size: 2.2rem;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+.N-R{
+    font-size: 1.1rem;
+    font-weight: 400;
 }
