--- a/src/components/ValidateForm/styles.css
+++ b/src/components/ValidateForm/styles.css
@@ -1,12 +1,9 @@
 input{
     width: 200px;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
 }
 .center{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     flex-direction: column;
     height: 500px;
     width: 500px;
